Add configuration for native building